Fix missing padding on Help section

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -166,7 +166,7 @@ a {
 // Help : base class top format markdown output inside it
 // -------------------------------------------------------------------- */
 .rw-Help {
-  @apply md:px-4 pt-6 pb-6;
+  @apply px-4 pt-6 pb-6;
   @apply mb-6;
   border-bottom: 1px solid var(--color-gray-dark);
 
